gitops/platform/wave-2/oauth2-proxy/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  hosts:
    - oauth2proxy.opnsense.internal
  gateways:
    - istio-ingress/main
  http:
    - route:
        - destination:
            host: oauth2-proxy.oauth2-proxy.svc.cluster.local
            port:
              number: 4180
